* Display piwik version number in archive.php output * small css fix to make Actions tables look better and "jump" less often on click
git-svn-id: http://dev.piwik.org/svn/trunk@7618 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/CoreHome/templates/datatable.css
+++ b/plugins/CoreHome/templates/datatable.css
@@ -169,6 +169,11 @@ table.dataTable th.label {
 	border-left: 0;
 }
 
+table.dataTableActions th.label {
+    /* Ensures tables have enough space to display subtable on click, and prevent the jumping effect */
+    min-width: 250px;
+}
+
 table.dataTable span.label.highlighted {
 	font-style: italic;
 }
